# tisean_framework

./: .gitignore  Makefile.in  README  binning.c  binning2d.c  configure.in  histo2d.c  histogram.c  histond.c  multi_series.c  negentropy.c  pca.c  psd.c  series.c  test_col1  test_data  test_prod  test_psd  two_series.c
routines/: Makefile.in  README  four1.c  get_multi_series.c  psd1.c  realft.c  tisean_cec.h  tsa.h  variance_dof.c
