dnl Process this file with autoconf to produce a configure script.
AC_INIT

AC_PREFIX_DEFAULT(${HOME})

dnl Check for prfix directory and create it if necessary
test "x$prefix" = xNONE && prefix=$ac_default_prefix

AC_MSG_CHECKING([whether $prefix is a directory and writeable])
mkdir -p $prefix 2>&5
if test -d $prefix && echo "" > $prefix/test_conf_write \
   && rm -f $prefix/test_conf_write; then
   AC_MSG_RESULT(yes)
else
   AC_MSG_RESULT(no)
   AC_MSG_WARN([
*** $prefix must be a writeable directory for installation
*** either you provide that or give another one, say mydir,  by calling
***    $ ./configure --prefix=mydir
])
fi

dnl Checks for programs.

for ccc in "$CC" cc gcc acc "cc -Aa"; do
   if test -z "$ccc"; then
      continue
   fi
   CC=$ccc
   AC_MSG_CHECKING([whether ($CC $CFLAGS $LDFLAGS) works])
   ac_cpp='$CPP $CPPFLAGS'
   ac_compile='$CC -c $CFLAGS $CPPFLAGS conftest.c 1>&5'
   ac_link='$CC -o conftest $CFLAGS $CPPFLAGS $LDFLAGS conftest.c $LIBS 1>&5'
   echo '#include "confdefs.h"'  > conftest.c
   echo 'main(int argc,char **argv){return(0);}' >> conftest.c
   if { (eval $ac_link) 2>&5; } && test -s conftest; then
	 rm -fr conftest*
	 AC_MSG_RESULT(yes)
	 break
   else
	 rm -fr conftest*
	 AC_MSG_RESULT(no)
	 CC=
   fi
done

if test -z "$CC"; then
   AC_MSG_WARN([
*** No valid ANSI C compiler found
*** You will not be able to use some of the routines
*** If you do have a C compiler called by, say, mycc -ANSI, do:
***    $ setenv CC "mycc -ANSI"
*** and rerun
])
fi

if test -n "$CC" && test -z "$CFLAGS"; then
   echo 'void f(){}' > conftest.c
   for cflags in -O3 -O2 -O +O3 +O -xO3; do
      AC_MSG_CHECKING([whether $CC accepts $cflags])
      if test -z "`$CC $cflags -c conftest.c 2>&1`"; then
         AC_MSG_RESULT(yes)
	 CFLAGS=$cflags
         break
      else
         AC_MSG_RESULT(no)
      fi
   done
   if test -z "$CFLAGS"; then
      AC_MSG_WARN([
*** no valid optimisation flags for $CC found
])
   fi
   rm -f conftest*
fi

if test -n "$CC"; then
   AC_CHECK_LIB(m, main)

dnl Checks for header files.
   AC_HEADER_STDC
   AC_CHECK_HEADERS(limits.h malloc.h)

dnl Checks for typedefs, structures, and compiler characteristics.
   AC_C_CONST
   if test $ac_cv_c_const = no; then
      CC="$CC -Dconst="
   fi

   AC_TYPE_SIZE_T

dnl Checks for library functions.
   AC_FUNC_MEMCMP
fi

AC_SUBST(CC)

AC_CHECK_PROG(AR,ar,ar,ar)
ARFLAGS=r
AC_MSG_CHECKING([whether ${AR} accepts ${ARFLAGS}])
if test -n "$CC"; then
   echo 'void f(){}' > libtest.c
   ${CC} -c libtest.c
else
   echo '      end' > libtest.f
   ${FC} -c libtest.f
fi
${AR} ${ARFLAGS} libtest.a libtest.o 1>&5 2>&5
if test -s libtest.a; then
  AC_MSG_RESULT(yes)
else
  ARFLAGS=-r
  AC_MSG_RESULT([no, using ${ARFLAGS} instead])
fi
rm -f libtest.*
AC_SUBST(ARFLAGS)

AC_PROG_INSTALL
AC_PROG_MAKE_SET
AC_PROG_RANLIB

AC_OUTPUT(Makefile routines/Makefile)
